kubernetes/postAPI.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: post-api
spec:
    replicas: 1
    selector:
        matchLabels:
            app: post-api
    template:
        metadata:
            labels:
                app: post-api
        spec:
            containers:
                - name: post-api
                  image: olmantz/post_api
                  imagePullPolicy: Always
                  resources:
                      limits:
                          memory: "64Mi"
                          cpu: "128m"
                  ports:
                      - containerPort: 8080
                        name: http
---
  apiVersion: v1
  kind: Service
  metadata:
    name: post-api-service
  spec:
    selector:
        app: post-api
    ports:
    - port: 80
      targetPort: 80

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#     name: sublime-postapi-deployment
# # ... (The rest of the PostAPI deployment configuration)
# ---
# apiVersion: v1
# kind: Service
# metadata:
#    name: sublime-postapi-service
# # ... (The rest of the PostAPI service configuration)
