kubernetes/manifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: sublimewebapp.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: olmantz/sublime_gateway:kube-local
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            limits:
              memory: "64Mi"
              cpu: "128m"
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: ingress-nginx
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: gateway-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: user-api
    namespace: ingress-nginx
spec:
    replicas: 1
    selector:
        matchLabels:
            app: user-api
    template:
        metadata:
            labels:
                app: user-api
        spec:
            containers:
                - name: user-api
                  image: olmantz/user_api:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 80
                        name: http
                  resources:
                      limits:
                          memory: "64Mi"
                          cpu: "128m"
---
apiVersion: v1
kind: Service
metadata:
    name: user-api
    namespace: ingress-nginx
spec:
    type: ClusterIP
    ports:
      - port: 80
        targetPort: 80
    selector:
        app: user-api
---
